New Kittopia Exports

--- a/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Bop.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Bop.cfg
@@ -205,9 +205,6 @@
 				mainTexOffset = 0,0
 				planetOpacity = 1
 			}
-			PhysicsMaterial
-			{
-			}
 			Mods
 			{
 				FlattenArea
@@ -221,6 +218,8 @@
 					smoothStart = 0
 					order = 11
 					enabled = False
+					name = _Crater1
+					index = 0
 				}
 				MapDecal
 				{
@@ -239,6 +238,8 @@
 					useAlphaHeightSmoothing = False
 					order = 120
 					enabled = True
+					name = _Crater1
+					index = 0
 				}
 				VertexSimplexHeightAbsolute
 				{
@@ -249,6 +250,8 @@
 					seed = 3339066
 					order = 10
 					enabled = True
+					name = _Height
+					index = 0
 				}
 				VertexHeightNoise
 				{
@@ -262,6 +265,8 @@
 					lacunarity = 2.5
 					order = 19
 					enabled = True
+					name = _Height
+					index = 0
 				}
 				FlattenArea
 				{
@@ -274,6 +279,8 @@
 					smoothStart = 0
 					order = 13
 					enabled = False
+					name = _Crater2
+					index = 1
 				}
 				MapDecal
 				{
@@ -292,6 +299,8 @@
 					useAlphaHeightSmoothing = False
 					order = 121
 					enabled = True
+					name = _Crater2
+					index = 1
 				}
 				AltitudeAlpha
 				{
@@ -299,6 +308,8 @@
 					invert = False
 					order = 999999999
 					enabled = True
+					name = _Material_ModProjection
+					index = 0
 				}
 				VertexSimplexNoiseColor
 				{
@@ -311,6 +322,8 @@
 					seed = 64564
 					order = 100
 					enabled = True
+					name = _Color
+					index = 0
 				}
 				LandControl
 				{
@@ -335,6 +348,8 @@
 					vHeightMax = 10000
 					order = 999999
 					enabled = True
+					name = Scatter
+					index = 0
 					altitudeSimplex
 					{
 						frequency = 1
