--- a/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Dres.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Dres.cfg
@@ -244,12 +244,16 @@
 					seed = 346434
 					order = 200
 					enabled = True
+					name = _Color
+					index = 0
 				}
 				HeightColorMap
 				{
 					blend = 0.7
 					order = 201
 					enabled = True
+					name = _Color
+					index = 0
 					LandClasses
 					{
 						Class
@@ -290,6 +294,8 @@
 					oceanDepth = 0
 					order = 100
 					enabled = True
+					name = _Material_AerialPerspective
+					index = 0
 				}
 				VertexHeightMap
 				{
@@ -299,6 +305,8 @@
 					scaleDeformityByRadius = False
 					order = 20
 					enabled = True
+					name = _HeightNoise
+					index = 0
 				}
 				VertexSimplexHeight
 				{
@@ -309,12 +317,16 @@
 					seed = 674624
 					order = 21
 					enabled = True
+					name = _HeightNoise
+					index = 0
 				}
 				FlattenOcean
 				{
 					oceanRadius = 1
 					order = 25
 					enabled = True
+					name = _HeightNoise
+					index = 0
 				}
 				VertexHeightNoise
 				{
@@ -328,6 +340,8 @@
 					lacunarity = 2.5
 					order = 22
 					enabled = True
+					name = _HeightNoise
+					index = 0
 				}
 				VertexSimplexHeightAbsolute
 				{
@@ -338,6 +352,8 @@
 					seed = 4234532
 					order = 30
 					enabled = True
+					name = _FineDetail
+					index = 0
 				}
 			}
 		}
