--- a/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Duna.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Duna.cfg
@@ -302,9 +302,6 @@
 				mainTexOffset = 0,0
 				planetOpacity = 0
 			}
-			PhysicsMaterial
-			{
-			}
 			Mods
 			{
 				VertexHeightMap
@@ -315,6 +312,8 @@
 					scaleDeformityByRadius = False
 					order = 10
 					enabled = True
+					name = _Height
+					index = 0
 				}
 				VertexSimplexHeightAbsolute
 				{
@@ -325,6 +324,8 @@
 					seed = 23893455
 					order = 12
 					enabled = True
+					name = _Height
+					index = 0
 				}
 				VertexHeightNoiseVertHeightCurve2
 				{
@@ -346,6 +347,8 @@
 					simplexSeed = 654786
 					order = 13
 					enabled = True
+					name = _Height
+					index = 0
 					simplexCurve
 					{
 						key = 0 0 0.1466263 0.1466263
@@ -373,6 +376,8 @@
 					simplexSeed = 654786
 					order = 14
 					enabled = True
+					name = _Height
+					index = 1
 					simplexCurve
 					{
 						key = 0 0 2 2
@@ -399,6 +404,8 @@
 					simplexSeed = 546567
 					order = 15
 					enabled = True
+					name = _Height
+					index = 2
 					simplexCurve
 					{
 						key = 0 0 0 0
@@ -411,6 +418,8 @@
 					invert = False
 					order = 999999999
 					enabled = True
+					name = _Material_ModProjection
+					index = 0
 				}
 				LandControl
 				{
@@ -436,6 +445,8 @@
 					vHeightMax = 3500
 					order = 9999991
 					enabled = True
+					name = _LandClass
+					index = 0
 					altitudeSimplex
 					{
 						frequency = 12
@@ -813,6 +824,8 @@
 					blend = 0.5
 					order = 9999993
 					enabled = True
+					name = _LandClass
+					index = 0
 				}
 				VertexSimplexNoiseColor
 				{
@@ -825,6 +838,8 @@
 					seed = 452635
 					order = 9999992
 					enabled = True
+					name = _LandClass
+					index = 0
 				}
 				AerialPerspectiveMaterial
 				{
@@ -835,6 +850,8 @@
 					oceanDepth = 0
 					order = 100
 					enabled = True
+					name = _Material_AerialPerspective
+					index = 0
 				}
 				MapDecal
 				{
@@ -854,6 +871,8 @@
 					useAlphaHeightSmoothing = False
 					order = 8000
 					enabled = True
+					name = Pyramid
+					index = 0
 				}
 			}
 		}
