--- a/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Eve.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Eve.cfg
@@ -1,4 +1,4 @@
-﻿// KittopiaTech - a Kopernicus Visual Editor
+// KittopiaTech - a Kopernicus Visual Editor
 
 @Kopernicus:NEEDS[!Kopernicus]
 {
@@ -323,6 +323,8 @@
 					scaleDeformityByRadius = False
 					order = 10
 					enabled = True
+					name = _HeightNoise
+					index = 0
 				}
 				VertexSimplexHeight
 				{
@@ -333,6 +335,8 @@
 					seed = 12435453
 					order = 11
 					enabled = True
+					name = _HeightNoise
+					index = 0
 				}
 				VertexHeightNoiseVertHeightCurve2
 				{
@@ -354,6 +358,8 @@
 					simplexSeed = 661000047
 					order = 12
 					enabled = True
+					name = _HeightNoise
+					index = 0
 					simplexCurve
 					{
 						key = 0 0 0 0
@@ -384,6 +390,8 @@
 					vHeightMax = 3500
 					order = 9999991
 					enabled = True
+					name = _LandClass
+					index = 0
 					altitudeSimplex
 					{
 						frequency = 12
@@ -664,6 +672,8 @@
 					seed = 454213321
 					order = 9999992
 					enabled = True
+					name = _LandClass
+					index = 0
 				}
 				VertexColorMapBlend
 				{
@@ -671,6 +681,8 @@
 					blend = 0.25
 					order = 9999993
 					enabled = True
+					name = _LandClass
+					index = 0
 				}
 				AltitudeAlpha
 				{
@@ -678,6 +690,8 @@
 					invert = False
 					order = 999999999
 					enabled = True
+					name = _Material_ModProjection
+					index = 0
 				}
 				AerialPerspectiveMaterial
 				{
@@ -688,6 +702,8 @@
 					oceanDepth = 0
 					order = 100
 					enabled = True
+					name = _Material_AerialPerspective
+					index = 0
 				}
 				QuadEnhanceCoast
 				{
@@ -695,6 +711,8 @@
 					oceanFactor = 1
 					order = 9999
 					enabled = True
+					name = _CoastlineLOD
+					index = 0
 				}
 				AerialPerspectiveMaterial
 				{
@@ -705,6 +723,122 @@
 					oceanDepth = 0
 					order = 100
 					enabled = True
+					name = _Material_AerialPerspective
+					index = -1
+				}
+			}
+		}
+		Ocean
+		{
+			ocean = False
+			oceanColor = 0,0,0,1
+			oceanHeight = 0
+			density = 1
+			minLevel = 1
+			maxLevel = 7
+			minDetailDistance = 8
+			maxQuadLengthsPerFrame = 0.03
+			Material
+			{
+				color = 0.5242465,0.46135,0.5671642,1
+				colorFromSpace = 0.4705882,0.3607843,0.5450981,1
+				specColor = 0.01489836,0.01489836,0.01489836,1
+				shininess = 1
+				gloss = 0.2
+				tiling = 2000
+				waterTex = BUILTIN/quiet
+				waterTexScale = 1,1
+				waterTexOffset = 0,0
+				waterTex1 = BUILTIN/quiet
+				waterTex1Scale = 1,1
+				waterTex1Offset = 0,0
+				bTiling = 800
+				bumpMap = BUILTIN/quiet
+				bumpMapScale = 1,1
+				bumpMapOffset = 0,0
+				displacement = 0.01
+				texDisplacement = 0.31
+				dispFreq = 0.1
+				mix = 0.5547009
+				oceanOpacity = 1
+				falloffPower = 5
+				falloffExp = 0
+				fogColor = 0.9179105,0.9179105,1,1
+				heightFallOff = 0.2
+				globalDensity = -1.5E-05
+				atmosphereDepth = 150000
+				fogColorRamp = BUILTIN/purple_atmogradiant
+				fogColorRampScale = 1,1
+				fogColorRampOffset = 0,0
+				fadeStart = 20000
+				fadeEnd = 60000
+				planetOpacity = 1
+				normalXYFudge = 1.4
+				normalZFudge = 1.18
+			}
+			FallbackMaterial
+			{
+				color = 0.5242465,0.46135,0.5671642,1
+				colorFromSpace = 0.2654445,0.2443194,0.3059701,1
+				specColor = 1,1,1,1
+				shininess = 1
+				gloss = 1
+				tiling = 2000
+				waterTex = BUILTIN/quiet
+				waterTexScale = 1,1
+				waterTexOffset = 0,0
+				waterTex1 = BUILTIN/quiet
+				waterTex1Scale = 1,1
+				waterTex1Offset = 0,0
+				fadeStart = 20000
+				fadeEnd = 60000
+				planetOpacity = 1
+			}
+			Fog
+			{
+				afgAltMult = 0.05
+				afgBase = 0.6
+				afgLerp = False
+				afgMin = 0.05
+				fogColorEnd = 0,0.085,0.1225,1
+				fogColorStart = 0.38,0,0.49,1
+				fogDensityAltScalar = -0.0008
+				fogDensityEnd = 0.025
+				fogDensityExponent = 1
+				fogDensityPQSMult = 0.02
+				fogDensityStart = 0.005
+				skyColorMult = 1.1
+				skyColorOpacityAltMult = 12
+				skyColorOpacityBase = 0.33
+				sunAltMult = 0.01
+				sunBase = 0.5
+				sunMin = 0.05
+				useFog = True
+			}
+			Mods
+			{
+				AerialPerspectiveMaterial
+				{
+					atmosphereDepth = 5000
+					DEBUG_SetEveryFrame = False
+					globalDensity = -7.5E-06
+					heightFalloff = 0.2
+					oceanDepth = 0
+					order = 100
+					enabled = True
+					name = _Material_AerialPerspective
+					index = 0
+				}
+				RemoveQuadMap
+				{
+					map = BUILTIN/eve_height_new
+					deformity = 0
+					maxHeight = 0.7
+					minHeight = 0
+					order = 1
+					enabled = True
+					name = QuadRemoveMap
+					index = 0
 				}
 			}
 		}
