--- a/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Gilly.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Gilly.cfg
@@ -1,4 +1,4 @@
-﻿// KittopiaTech - a Kopernicus Visual Editor
+// KittopiaTech - a Kopernicus Visual Editor
 
 @Kopernicus:NEEDS[!Kopernicus]
 {
@@ -193,9 +193,6 @@
 				mainTexOffset = 0,0
 				planetOpacity = 1
 			}
-			PhysicsMaterial
-			{
-			}
 			Mods
 			{
 				VertexSimplexHeightAbsolute
@@ -207,6 +204,8 @@
 					seed = 12
 					order = 10
 					enabled = True
+					name = _Height
+					index = 0
 				}
 				VertexHeightNoise
 				{
@@ -220,6 +219,8 @@
 					lacunarity = 2.5
 					order = 19
 					enabled = True
+					name = _Height
+					index = 0
 				}
 				AltitudeAlpha
 				{
@@ -227,6 +228,8 @@
 					invert = False
 					order = 999999999
 					enabled = True
+					name = _Material_ModProjection
+					index = 0
 				}
 				VertexSimplexNoiseColor
 				{
@@ -239,6 +242,8 @@
 					seed = 111453
 					order = 100
 					enabled = True
+					name = _Color
+					index = 0
 				}
 				LandControl
 				{
@@ -263,6 +268,8 @@
 					vHeightMax = 10000
 					order = 999999
 					enabled = True
+					name = Scatter
+					index = 0
 					altitudeSimplex
 					{
 						frequency = 1
