--- a/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Ike.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Ike.cfg
@@ -223,9 +223,6 @@
 				mainTexOffset = 0,0
 				planetOpacity = 1
 			}
-			PhysicsMaterial
-			{
-			}
 			Mods
 			{
 				VertexSimplexHeightAbsolute
@@ -237,6 +234,8 @@
 					seed = 2297
 					order = 10
 					enabled = True
+					name = _Height
+					index = 0
 				}
 				VertexHeightNoise
 				{
@@ -250,6 +249,8 @@
 					lacunarity = 2.5
 					order = 19
 					enabled = True
+					name = _Height
+					index = 0
 				}
 				VertexSimplexHeight
 				{
@@ -260,6 +261,8 @@
 					seed = 56899452
 					order = 20
 					enabled = True
+					name = _Height
+					index = 0
 				}
 				AltitudeAlpha
 				{
@@ -267,6 +270,8 @@
 					invert = False
 					order = 999999999
 					enabled = True
+					name = _Material_ModProjection
+					index = 0
 				}
 				VertexSimplexNoiseColor
 				{
@@ -279,12 +284,16 @@
 					seed = 456364
 					order = 100
 					enabled = True
+					name = _Color
+					index = 0
 				}
 				VertexColorMap
 				{
 					map = BUILTIN/desertplanetmoon_coloroverlay
 					order = 99
 					enabled = True
+					name = _Color
+					index = 0
 				}
 				LandControl
 				{
@@ -309,6 +318,8 @@
 					vHeightMax = 10000
 					order = 999999
 					enabled = True
+					name = Scatter
+					index = 0
 					altitudeSimplex
 					{
 						frequency = 1
