--- a/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Minmus.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Minmus.cfg
@@ -245,6 +245,8 @@
 					invert = False
 					order = 999999999
 					enabled = True
+					name = _Material_ModProjection
+					index = 0
 				}
 				VertexPlanet
 				{
@@ -264,6 +266,8 @@
 					terrainSmoothing = 0.100000001490116
 					order = 100
 					enabled = True
+					name = VertexPlanet
+					index = 0
 					ContinentalSimplex
 					{
 						deformity = 1
@@ -419,6 +423,8 @@
 					vHeightMax = 10000
 					order = 999999
 					enabled = True
+					name = Scatter
+					index = 0
 					altitudeSimplex
 					{
 						frequency = 1
