--- a/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Moho.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Moho.cfg
@@ -268,12 +268,16 @@
 					seed = 346434
 					order = 200
 					enabled = True
+					name = _Color
+					index = 0
 				}
 				HeightColorMap
 				{
 					blend = 0.75
 					order = 201
 					enabled = True
+					name = _Color
+					index = 0
 					LandClasses
 					{
 						Class
@@ -302,6 +306,8 @@
 					invert = False
 					order = 999999999
 					enabled = True
+					name = _Material_ModProjection
+					index = 0
 				}
 				AerialPerspectiveMaterial
 				{
@@ -312,6 +318,8 @@
 					oceanDepth = 0
 					order = 100
 					enabled = True
+					name = _Material_AerialPerspective
+					index = 0
 				}
 				VertexHeightMap
 				{
@@ -321,6 +329,8 @@
 					scaleDeformityByRadius = False
 					order = 20
 					enabled = True
+					name = _HeightNoise
+					index = 0
 				}
 				VertexSimplexHeight
 				{
@@ -331,12 +341,16 @@
 					seed = 456574
 					order = 21
 					enabled = True
+					name = _HeightNoise
+					index = 0
 				}
 				FlattenOcean
 				{
 					oceanRadius = 1
 					order = 22
 					enabled = True
+					name = _HeightNoise
+					index = 0
 				}
 				VertexHeightNoiseVertHeightCurve2
 				{
@@ -358,6 +372,8 @@
 					simplexSeed = 453452378
 					order = 23
 					enabled = True
+					name = _HeightNoise
+					index = 0
 					simplexCurve
 					{
 						key = 0 0 0 0
@@ -374,6 +390,8 @@
 					seed = 435345
 					order = 30
 					enabled = True
+					name = _FineDetail
+					index = 0
 				}
 			}
 		}
