--- a/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Mun.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Mun.cfg
@@ -1,4 +1,4 @@
-﻿// KittopiaTech - a Kopernicus Visual Editor
+// KittopiaTech - a Kopernicus Visual Editor
 
 @Kopernicus:NEEDS[!Kopernicus]
 {
@@ -255,9 +255,6 @@
 				mainTexOffset = 0,0
 				planetOpacity = 1
 			}
-			PhysicsMaterial
-			{
-			}
 			Mods
 			{
 				VertexColorMap
@@ -265,6 +262,8 @@
 					map = BUILTIN/munColorMap2
 					order = 10
 					enabled = True
+					name = _Color
+					index = 0
 				}
 				VertexHeightMap
 				{
@@ -274,6 +273,8 @@
 					scaleDeformityByRadius = False
 					order = 10
 					enabled = True
+					name = _Height
+					index = 0
 				}
 				AltitudeAlpha
 				{
@@ -281,6 +282,8 @@
 					invert = False
 					order = 999999999
 					enabled = True
+					name = _Material_ModProjection
+					index = 0
 				}
 				LandControl
 				{
@@ -305,6 +308,8 @@
 					vHeightMax = 10000
 					order = 999999
 					enabled = True
+					name = Scatter
+					index = 0
 					altitudeSimplex
 					{
 						frequency = 1
@@ -443,6 +448,8 @@
 					smoothStart = 0
 					order = 100
 					enabled = True
+					name = Monolith02
+					index = 0
 				}
 				FlattenArea
 				{
@@ -455,6 +462,8 @@
 					smoothStart = 0
 					order = 100
 					enabled = True
+					name = Monolith01
+					index = 1
 				}
 				VertexSimplexNoiseColor
 				{
@@ -467,6 +476,8 @@
 					seed = 0
 					order = 200
 					enabled = True
+					name = _ColorNoise
+					index = 0
 				}
 				VertexSimplexHeight
 				{
@@ -477,6 +488,8 @@
 					seed = 2211221
 					order = 102
 					enabled = True
+					name = _HeightNoise
+					index = 0
 				}
 				VertexHeightNoiseVertHeight
 				{
@@ -491,6 +504,8 @@
 					lacunarity = 2
 					order = 103
 					enabled = True
+					name = _HeightNoise
+					index = 0
 				}
 				VoronoiCraters
 				{
@@ -510,6 +525,8 @@
 					voronoiSeed = 824
 					order = 101
 					enabled = True
+					name = _HeightNoise
+					index = 0
 					CraterCurve
 					{
 						key = -0.9982381 -0.7411783 -0.06500059 -0.06500059
@@ -551,6 +568,8 @@
 					voronoiSeed = 462
 					order = 100
 					enabled = True
+					name = _HeightNoise
+					index = 1
 					CraterCurve
 					{
 						key = -0.9963056 -0.7950293 -0.1902251 -0.1902251
