--- a/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Pol.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Pol.cfg
@@ -199,9 +199,6 @@
 				mainTexOffset = 0,0
 				planetOpacity = 1
 			}
-			PhysicsMaterial
-			{
-			}
 			Mods
 			{
 				VertexSimplexHeightAbsolute
@@ -213,6 +210,8 @@
 					seed = 2312
 					order = 20
 					enabled = True
+					name = _Height
+					index = 0
 				}
 				VertexHeightNoise
 				{
@@ -226,12 +225,16 @@
 					lacunarity = 2.5
 					order = 10
 					enabled = True
+					name = _Height
+					index = 0
 				}
 				FlattenOcean
 				{
 					oceanRadius = 1
 					order = 11
 					enabled = True
+					name = _Height
+					index = 0
 				}
 				VertexSimplexHeightAbsolute
 				{
@@ -242,12 +245,16 @@
 					seed = 5645667
 					order = 21
 					enabled = True
+					name = _Height
+					index = 1
 				}
 				VertexHeightOffset
 				{
 					offset = -700
 					order = 80
 					enabled = True
+					name = _Height
+					index = 0
 				}
 				AltitudeAlpha
 				{
@@ -255,6 +262,8 @@
 					invert = False
 					order = 999999999
 					enabled = True
+					name = _Material_ModProjection
+					index = 0
 				}
 				VertexSimplexNoiseColor
 				{
@@ -267,12 +276,16 @@
 					seed = 9674345
 					order = 40
 					enabled = True
+					name = _Color
+					index = 0
 				}
 				HeightColorMap
 				{
 					blend = 0.5
 					order = 41
 					enabled = True
+					name = _Color
+					index = 0
 					LandClasses
 					{
 						Class
@@ -327,6 +340,8 @@
 					vHeightMax = 10000
 					order = 999999
 					enabled = True
+					name = Scatter
+					index = 0
 					altitudeSimplex
 					{
 						frequency = 1
