--- a/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Sun.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Sun.cfg
@@ -21,12 +21,16 @@
 			emissivity = 0
 			coreTemperatureOffset = 0
 			isHomeWorld = False
-			timewarpAltitudeLimits = 0,3270000,3270000,6540000,1.308E+07,2.616E+07,5.232E+07,6.54E+07
+			timewarpAltitudeLimits = 0 3270000 3270000 6540000 1.308E+07 2.616E+07 5.232E+07 6.54E+07
 			sphereOfInfluence = Infinity
 			hillSphere = Infinity
 			solarRotationPeriod = False
 			navballSwitchRadiusMult = 0.06
+			nonExactThreshold = 0.05
+			exactSearch = False
 			useTheInName = True
+			selectable = True
+			hiddenRnD = False
 			ScienceValues
 			{
 				landedDataValue = 1
@@ -90,12 +94,17 @@
 			{
 				key = 0 0 0 0
 			}
+			temperatureAxialSunBiasCurve
+			{
+				key = 0 0 0 0
+			}
 			temperatureAxialSunMultCurve
 			{
 				key = 0 0 0 0
 			}
-			AtmosphereFromGround
+			temperatureEccentricityBiasCurve
 			{
+				key = 0 0 0 0
 			}
 		}
 		ScaledVersion
@@ -107,10 +116,17 @@
 			deferMesh = False
 			Material
 			{
+				rampMap = BUILTIN/
+				rampMapScale = 1,1
+				rampMapOffset = 0,0
 				noiseMap = BUILTIN/sunnoisenew
+				noiseMapScale = 1,1
+				noiseMapOffset = 0,0
 				emitColor0 = 1,0.8160422,0.5069931,1
 				emitColor1 = 0.9253731,0.7731564,0.2879657,1
-				sunspotTexture = BUILTIN/sunsurfacenew
+				sunspotTex = BUILTIN/sunsurfacenew
+				sunspotTexScale = 1,1
+				sunspotTexOffset = 0,0
 				sunspotPower = 1
 				sunspotColor = 0.2835821,0.1267107,0.02082244,1
 				rimColor = 1,0.8633754,0.5839161,1
@@ -120,12 +136,12 @@
 			Light
 			{
 				sunlightColor = 1,1,1,1
-				sunlightIntensity = 0.45
+				sunlightIntensity = 0.9
 				sunlightShadowStrength = 0.7523364
 				scaledSunlightColor = 1,1,1,1
-				scaledSunlightIntensity = 0.45
+				scaledSunlightIntensity = 0.9
 				IVASunColor = 1,0.977,0.896,1
-				IVASunIntensity = 0.34
+				IVASunIntensity = 0.8099999
 				ambientLightColor = 0.06,0.06,0.06,1
 				sunLensFlareColor = 1,1,1,1
 				givesOffLight = True
@@ -139,27 +155,9 @@
 					key = 38.56295 1.82142 0.0001713 0.0001713
 				}
 			}
-			Coronas
-			{
-				Corona
-				{
-					scaleSpeed = 0.007
-					scaleLimitY = 5
-					scaleLimitX = 5
-					updateInterval = 5
-					speed = -1
-					rotation = 0
-				}
-				Corona
-				{
-					scaleSpeed = 0.009
-					scaleLimitY = 5
-					scaleLimitX = 5
-					updateInterval = 5
-					speed = 1
-					rotation = 0
-				}
-			}
+		}
+		Particles
+		{
 		}
 	}
 }
