--- a/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Tylo.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Tylo.cfg
@@ -1,4 +1,4 @@
-﻿// KittopiaTech - a Kopernicus Visual Editor
+// KittopiaTech - a Kopernicus Visual Editor
 
 @Kopernicus:NEEDS[!Kopernicus]
 {
@@ -223,9 +223,6 @@
 				mainTexOffset = 0,0
 				planetOpacity = 1
 			}
-			PhysicsMaterial
-			{
-			}
 			Mods
 			{
 				VertexSimplexHeightAbsolute
@@ -237,6 +234,8 @@
 					seed = 4447895
 					order = 50
 					enabled = True
+					name = _Height
+					index = 0
 				}
 				VertexSimplexHeight
 				{
@@ -247,6 +246,8 @@
 					seed = 98374
 					order = 59
 					enabled = True
+					name = _Height
+					index = 0
 				}
 				VertexHeightMap
 				{
@@ -256,12 +257,16 @@
 					scaleDeformityByRadius = False
 					order = 49
 					enabled = True
+					name = _Height
+					index = 0
 				}
 				FlattenOcean
 				{
 					oceanRadius = 1
 					order = 60
 					enabled = True
+					name = _Height
+					index = 0
 				}
 				VertexHeightNoiseVertHeightCurve2
 				{
@@ -283,6 +288,8 @@
 					simplexSeed = 1909396195
 					order = 100
 					enabled = True
+					name = _Height
+					index = 0
 					simplexCurve
 					{
 						key = 0 0 0 0
@@ -295,12 +302,16 @@
 					invert = False
 					order = 999999999
 					enabled = False
+					name = _Material_ModProjection
+					index = 0
 				}
 				HeightColorMap
 				{
 					blend = 0.4
 					order = 201
 					enabled = True
+					name = _Color
+					index = 0
 					LandClasses
 					{
 						Class
@@ -337,6 +348,8 @@
 					map = BUILTIN/rockymoon_color
 					order = 200
 					enabled = True
+					name = _Color
+					index = 0
 				}
 				LandControl
 				{
@@ -361,6 +374,8 @@
 					vHeightMax = 10000
 					order = 999999
 					enabled = True
+					name = Scatter
+					index = 0
 					altitudeSimplex
 					{
 						frequency = 1
@@ -505,6 +520,8 @@
 					useAlphaHeightSmoothing = False
 					order = 200
 					enabled = True
+					name = Sagan
+					index = 0
 				}
 			}
 		}
