--- a/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Vall.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Vall.cfg
@@ -199,9 +199,6 @@
 				mainTexOffset = 0,0
 				planetOpacity = 1
 			}
-			PhysicsMaterial
-			{
-			}
 			Mods
 			{
 				VertexSimplexHeightAbsolute
@@ -213,6 +210,8 @@
 					seed = 56499778
 					order = 10
 					enabled = True
+					name = _Height
+					index = 0
 				}
 				VertexHeightNoise
 				{
@@ -226,6 +225,8 @@
 					lacunarity = 2
 					order = 11
 					enabled = True
+					name = _Height
+					index = 0
 				}
 				VertexHeightMap
 				{
@@ -235,6 +236,8 @@
 					scaleDeformityByRadius = False
 					order = 9
 					enabled = True
+					name = _Height
+					index = 0
 				}
 				VertexSimplexHeightAbsolute
 				{
@@ -245,6 +248,8 @@
 					seed = 8008135
 					order = 12
 					enabled = True
+					name = _Height
+					index = 1
 				}
 				VertexHeightMap
 				{
@@ -254,6 +259,8 @@
 					scaleDeformityByRadius = False
 					order = 100
 					enabled = True
+					name = _Height
+					index = 1
 				}
 				AltitudeAlpha
 				{
@@ -261,12 +268,16 @@
 					invert = False
 					order = 999999999
 					enabled = True
+					name = _Material_ModProjection
+					index = 0
 				}
 				HeightColorMap
 				{
 					blend = 1
 					order = 500
 					enabled = True
+					name = _Color
+					index = 0
 					LandClasses
 					{
 						Class
@@ -309,6 +320,8 @@
 					seed = 777834934
 					order = 501
 					enabled = True
+					name = _Color
+					index = 0
 				}
 				LandControl
 				{
@@ -334,6 +347,8 @@
 					vHeightMax = 10000
 					order = 999999
 					enabled = True
+					name = Scatter
+					index = 0
 					altitudeSimplex
 					{
 						frequency = 1
