--- a/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Eeloo.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Eeloo.cfg
@@ -1,4 +1,4 @@
-﻿// KittopiaTech - a Kopernicus Visual Editor
+// KittopiaTech - a Kopernicus Visual Editor
 
 @Kopernicus:NEEDS[!Kopernicus]
 {
@@ -223,9 +223,6 @@
 				mainTexOffset = 0,0
 				planetOpacity = 0
 			}
-			PhysicsMaterial
-			{
-			}
 			Mods
 			{
 				LandControl
@@ -252,6 +249,8 @@
 					vHeightMax = 3500
 					order = 9999991
 					enabled = True
+					name = _LandClass
+					index = 0
 					altitudeSimplex
 					{
 						frequency = 12
@@ -530,6 +529,8 @@
 					oceanDepth = 0
 					order = 100
 					enabled = True
+					name = _Material_AerialPerspective
+					index = 0
 				}
 				VertexHeightMap
 				{
@@ -539,6 +540,8 @@
 					scaleDeformityByRadius = False
 					order = 10
 					enabled = True
+					name = _Height
+					index = 0
 				}
 				VertexSimplexHeight
 				{
@@ -549,6 +552,8 @@
 					seed = 435213423
 					order = 20
 					enabled = True
+					name = _HeightNoise
+					index = 0
 				}
 				VertexHeightNoise
 				{
@@ -562,6 +567,8 @@
 					lacunarity = 1.5
 					order = 22
 					enabled = True
+					name = _HeightNoise
+					index = 0
 				}
 				VertexVoronoi
 				{
@@ -572,12 +579,16 @@
 					seed = 56457563
 					order = 23
 					enabled = True
+					name = _HeightNoise
+					index = 0
 				}
 				FlattenOcean
 				{
 					oceanRadius = 1
 					order = 21
 					enabled = True
+					name = _HeightNoise
+					index = 0
 				}
 				VertexHeightNoiseVertHeight
 				{
@@ -592,6 +603,8 @@
 					lacunarity = 3
 					order = 30
 					enabled = True
+					name = _FineDetail
+					index = 0
 				}
 			}
 		}
