--- a/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Kerbin.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Kerbin.cfg
@@ -363,6 +363,8 @@
 					seed = 453453435
 					order = 20
 					enabled = True
+					name = _HeightNoise
+					index = 0
 				}
 				VertexHeightNoiseVertHeightCurve2
 				{
@@ -384,6 +386,8 @@
 					simplexSeed = 248775058
 					order = 32
 					enabled = True
+					name = _HeightNoise
+					index = 0
 					simplexCurve
 					{
 						key = 0 0 0 0
@@ -408,6 +412,8 @@
 					simplexSeed = 248775058
 					order = 16
 					enabled = True
+					name = _HeightNoise
+					index = 0
 					simplexCurve
 					{
 						key = 0.007249059 0.0007464408 0 0
@@ -444,6 +450,8 @@
 					vHeightMax = 3500
 					order = 9999991
 					enabled = True
+					name = _LandClassOcean
+					index = 0
 					altitudeSimplex
 					{
 						frequency = 12
@@ -1521,6 +1529,8 @@
 					oceanDepth = 0
 					order = 100
 					enabled = True
+					name = _Material_AerialPerspective
+					index = 0
 				}
 				VertexHeightMap
 				{
@@ -1530,6 +1540,8 @@
 					scaleDeformityByRadius = False
 					order = 10
 					enabled = True
+					name = _Height
+					index = 0
 				}
 				QuadEnhanceCoast
 				{
@@ -1537,6 +1549,8 @@
 					oceanFactor = 1
 					order = 9999
 					enabled = True
+					name = _CoastlineLOD
+					index = 0
 				}
 				MapDecalTangent
 				{
@@ -1555,6 +1569,8 @@
 					useAlphaHeightSmoothing = True
 					order = 99999
 					enabled = True
+					name = KSC
+					index = 0
 				}
 				MapDecal
 				{
@@ -1573,6 +1589,8 @@
 					useAlphaHeightSmoothing = True
 					order = 99999
 					enabled = True
+					name = KSC2
+					index = 0
 				}
 				AerialPerspectiveMaterial
 				{
@@ -1583,6 +1601,8 @@
 					oceanDepth = 0
 					order = 100
 					enabled = True
+					name = _Material_AerialPerspective
+					index = -1
 				}
 				FlattenArea
 				{
@@ -1595,6 +1615,8 @@
 					smoothStart = 0
 					order = 99999
 					enabled = True
+					name = Pyramids
+					index = 0
 				}
 				MapDecalTangent
 				{
@@ -1613,6 +1635,151 @@
 					useAlphaHeightSmoothing = True
 					order = 9999
 					enabled = True
+					name = IslandAirfield
+					index = 1
+				}
+			}
+		}
+		Ocean
+		{
+			ocean = False
+			oceanColor = 0,0,0,1
+			oceanHeight = 0
+			density = 1
+			minLevel = 1
+			maxLevel = 7
+			minDetailDistance = 8
+			maxQuadLengthsPerFrame = 0.03
+			Material
+			{
+				color = 0.4509804,0.5254902,0.5254902,1
+				colorFromSpace = 0.06959084,0.1021004,0.1567164,1
+				specColor = 0,0,0,1
+				shininess = 0.697751
+				gloss = 0.2
+				tiling = 1000
+				waterTex = BUILTIN/sea-water2
+				waterTexScale = 1,1
+				waterTexOffset = 0,0
+				waterTex1 = BUILTIN/sea-water3
+				waterTex1Scale = 1,1
+				waterTex1Offset = 0,0
+				bTiling = 800
+				bumpMap = BUILTIN/quiet
+				bumpMapScale = 1,1
+				bumpMapOffset = 0,0
+				displacement = 0.05
+				texDisplacement = -0.31
+				dispFreq = 0.15
+				mix = 0.2947066
+				oceanOpacity = 0.5
+				falloffPower = 1.1
+				falloffExp = 2
+				fogColor = 0.9179105,0.9179105,1,1
+				heightFallOff = 0.2
+				globalDensity = -8E-06
+				atmosphereDepth = 70000
+				fogColorRamp = BUILTIN/AerialRampKerbin2
+				fogColorRampScale = 1,1
+				fogColorRampOffset = 0,0
+				fadeStart = 20000
+				fadeEnd = 60000
+				planetOpacity = 1
+				normalXYFudge = 1.4
+				normalZFudge = 1.18
+			}
+			FallbackMaterial
+			{
+				color = 0.4941176,0.5529412,0.627451,1
+				colorFromSpace = 0.05098039,0.1647059,0.2156863,1
+				specColor = 1,1,1,1
+				shininess = 1
+				gloss = 0.4327519
+				tiling = 1000
+				waterTex = BUILTIN/sea-water2
+				waterTexScale = 1,1
+				waterTexOffset = 0,0
+				waterTex1 = BUILTIN/sea-water3
+				waterTex1Scale = 1,1
+				waterTex1Offset = 0,0
+				fadeStart = 20000
+				fadeEnd = 60000
+				planetOpacity = 0
+			}
+			Fog
+			{
+				afgAltMult = 0.05
+				afgBase = 0.6
+				afgLerp = False
+				afgMin = 0.05
+				fogColorEnd = 0,0.085,0.1225,1
+				fogColorStart = 0,0.34,0.49,1
+				fogDensityAltScalar = -0.0008
+				fogDensityEnd = 0.025
+				fogDensityExponent = 1
+				fogDensityPQSMult = 0.02
+				fogDensityStart = 0.005
+				skyColorMult = 1.1
+				skyColorOpacityAltMult = 15
+				skyColorOpacityBase = 0.25
+				sunAltMult = 0.01
+				sunBase = 0.5
+				sunMin = 0.05
+				useFog = True
+			}
+			Mods
+			{
+				AerialPerspectiveMaterial
+				{
+					atmosphereDepth = 5000
+					DEBUG_SetEveryFrame = False
+					globalDensity = -7.5E-06
+					heightFalloff = 0.2
+					oceanDepth = 0
+					order = 100
+					enabled = True
+					name = _Material_AerialPerspective
+					index = 0
+				}
+				RemoveQuadMap
+				{
+					map = BUILTIN/kerbin_height_new
+					deformity = 0
+					maxHeight = 0.1
+					minHeight = 0
+					order = 100
+					enabled = False
+					name = QuadRemoveMap
+					index = 0
+				}
+				OceanFX
+				{
+					angle = 0
+					blendA = 0
+					blendB = 0
+					framesPerSecond = 10
+					oceanOpacity = 0
+					spaceAltitude = 0
+					spaceSurfaceBlend = 0
+					specColor = 0,0,0,0
+					texBlend = 0
+					txIndex = 0
+					order = 100
+					enabled = True
+					name = OceanFX
+					index = 0
+					Watermain
+					{
+						waterTex-0 = BUILTIN/sea-water1
+						waterTex-1 = BUILTIN/sea-water2
+						waterTex-2 = BUILTIN/sea-water3
+						waterTex-3 = BUILTIN/sea-water4
+						waterTex-4 = BUILTIN/sea-water5
+						waterTex-5 = BUILTIN/sea-water6
+						waterTex-6 = BUILTIN/sea-water7
+						waterTex-7 = BUILTIN/sea-water8
+						waterTex-0 = BUILTIN/sea-water1
+					}
 				}
 			}
 		}
