--- a/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Laythe.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Laythe.cfg
@@ -1,4 +1,4 @@
-﻿// KittopiaTech - a Kopernicus Visual Editor
+// KittopiaTech - a Kopernicus Visual Editor
 
 @Kopernicus:NEEDS[!Kopernicus]
 {
@@ -332,6 +332,8 @@
 					vHeightMax = 6000
 					order = 100
 					enabled = True
+					name = _LandClass
+					index = 0
 					altitudeSimplex
 					{
 						frequency = 2
@@ -826,6 +828,8 @@
 					oceanDepth = 0
 					order = 101
 					enabled = True
+					name = _Material_AerialPerspective
+					index = 0
 				}
 				VertexHeightNoise
 				{
@@ -839,6 +843,8 @@
 					lacunarity = 3
 					order = 21
 					enabled = True
+					name = _HeightNoise
+					index = 0
 				}
 				VertexSimplexHeightMap
 				{
@@ -852,6 +858,8 @@
 					seed = 55345
 					order = 20
 					enabled = True
+					name = _HeightNoise
+					index = 0
 				}
 				QuadEnhanceCoast
 				{
@@ -859,6 +867,8 @@
 					oceanFactor = 1
 					order = 9999
 					enabled = True
+					name = _CoastlineLOD
+					index = 0
 				}
 				AerialPerspectiveMaterial
 				{
@@ -869,6 +879,8 @@
 					oceanDepth = 0
 					order = 100
 					enabled = True
+					name = _Material_AerialPerspective
+					index = -1
 				}
 				VertexHeightNoiseVertHeight
 				{
@@ -883,6 +895,8 @@
 					lacunarity = 1.5
 					order = 30
 					enabled = True
+					name = _FineDetail
+					index = 0
 				}
 				VertexHeightMap
 				{
@@ -892,6 +906,151 @@
 					scaleDeformityByRadius = False
 					order = 99
 					enabled = True
+					name = _Height
+					index = 0
+				}
+			}
+		}
+		Ocean
+		{
+			ocean = False
+			oceanColor = 0,0,0,1
+			oceanHeight = 0
+			density = 1
+			minLevel = 1
+			maxLevel = 6
+			minDetailDistance = 8
+			maxQuadLengthsPerFrame = 0.03
+			Material
+			{
+				color = 0.4138052,0.3870942,0.5149254,1
+				colorFromSpace = 0.1168781,0.1264566,0.1568628,1
+				specColor = 1,1,1,1
+				shininess = 1
+				gloss = 0.2
+				tiling = 1000
+				waterTex = BUILTIN/sea-water8
+				waterTexScale = 1,1
+				waterTexOffset = 0,0
+				waterTex1 = BUILTIN/sea-water1
+				waterTex1Scale = 1,1
+				waterTex1Offset = 0,0
+				bTiling = 800
+				bumpMap = BUILTIN/quiet
+				bumpMapScale = 1,1
+				bumpMapOffset = 0,0
+				displacement = 0.05
+				texDisplacement = 0.31
+				dispFreq = 0.15
+				mix = 0.4032745
+				oceanOpacity = 0.3
+				falloffPower = 3
+				falloffExp = 0.05
+				fogColor = 0.3214434,0.6112322,0.9477612,1
+				heightFallOff = 0.2
+				globalDensity = -8E-06
+				atmosphereDepth = 50000
+				fogColorRamp = BUILTIN/blue_atmogradient
+				fogColorRampScale = 1,1
+				fogColorRampOffset = 0,0
+				fadeStart = 20000
+				fadeEnd = 60000
+				planetOpacity = 1
+				normalXYFudge = 1.4
+				normalZFudge = 1.18
+			}
+			FallbackMaterial
+			{
+				color = 0.3366037,0.3780804,0.4477612,1
+				colorFromSpace = 0.1168781,0.1264566,0.1568628,1
+				specColor = 0.8493402,0.8493402,0.8493402,1
+				shininess = 1
+				gloss = 0.3336538
+				tiling = 1000
+				waterTex = BUILTIN/sea-water1
+				waterTexScale = 1,1
+				waterTexOffset = 0,0
+				waterTex1 = BUILTIN/sea-water2
+				waterTex1Scale = 1,1
+				waterTex1Offset = 0,0
+				fadeStart = 20000
+				fadeEnd = 60000
+				planetOpacity = 1
+			}
+			Fog
+			{
+				afgAltMult = 0.05
+				afgBase = 0.6
+				afgLerp = False
+				afgMin = 0.05
+				fogColorEnd = 0,0.085,0.1225,1
+				fogColorStart = 0,0.34,0.49,1
+				fogDensityAltScalar = -0.0008
+				fogDensityEnd = 0.025
+				fogDensityExponent = 1
+				fogDensityPQSMult = 0.02
+				fogDensityStart = 0.005
+				skyColorMult = 1.1
+				skyColorOpacityAltMult = 15
+				skyColorOpacityBase = 0.25
+				sunAltMult = 0.01
+				sunBase = 0.5
+				sunMin = 0.05
+				useFog = True
+			}
+			Mods
+			{
+				AerialPerspectiveMaterial
+				{
+					atmosphereDepth = 5000
+					DEBUG_SetEveryFrame = False
+					globalDensity = -7.5E-06
+					heightFalloff = 0.2
+					oceanDepth = 0
+					order = 100
+					enabled = True
+					name = _Material_AerialPerspective
+					index = 0
+				}
+				RemoveQuadMap
+				{
+					map = BUILTIN/oceanmoon_height
+					deformity = 0
+					maxHeight = 0.5
+					minHeight = 0
+					order = 1000
+					enabled = True
+					name = QuadRemoveMap
+					index = 0
+				}
+				OceanFX
+				{
+					angle = 0
+					blendA = 0
+					blendB = 0
+					framesPerSecond = 10
+					oceanOpacity = 0
+					spaceAltitude = 0
+					spaceSurfaceBlend = 0
+					specColor = 0,0,0,0
+					texBlend = 0
+					txIndex = 0
+					order = 100
+					enabled = True
+					name = OceanFX
+					index = 0
+					Watermain
+					{
+						waterTex-0 = BUILTIN/sea-water1
+						waterTex-1 = BUILTIN/sea-water2
+						waterTex-2 = BUILTIN/sea-water3
+						waterTex-3 = BUILTIN/sea-water4
+						waterTex-4 = BUILTIN/sea-water5
+						waterTex-5 = BUILTIN/sea-water6
+						waterTex-6 = BUILTIN/sea-water7
+						waterTex-7 = BUILTIN/sea-water8
+						waterTex-0 = BUILTIN/sea-water1
+					}
 				}
 			}
 		}
