use geeASL instead of mass

--- a/GameData/Sigma/Dimensions/Configs/General/massFix.cfg
+++ b/GameData/Sigma/Dimensions/Configs/General/massFix.cfg
@@ -1,34 +1,30 @@
 @Kopernicus:FOR[SigDim]
 {
 
-// This part calculates the mass of the body if it's not already defined
+// This part calculates the geeASL of the body if it is not defined
 
-	// mass from gravParameter
 
-	@Body:HAS[@Properties:HAS[#gravParameter[*]]]
+	@Body,*
 	{
-		@Properties
+		// mass from gravParameter
+		@Properties:HAS[#gravParameter[*]]
 		{
 			%mass = #$gravParameter$
 			@mass /= 6.674e-11
 			!gravParameter = DEL
 		}
-	}
-
-	// mass from geeASL + radius
-
-	@Body:HAS[@Properties:HAS[#geeASL[*],~mass[]]]
-	{
-		@Properties
+		// geeASL from mass + radius
+		@Properties:HAS[#mass[*]]
 		{
-			mass = #$radius$
-			@mass != 2
-			@mass *= #$geeASL$
-			@mass /= 6.674e-11
-			@mass *= 9.81
+			%geeASL = #$radius$
+			@geeASL != -2
+			@geeASL *= #$mass$
+			@geeASL *= 6.674e-11
+			@geeASL /= 9.81
+			!mass = DEL
 		}
 	}
-	
+
 // This part converts meanAnomalyAtEpochD (deg) to meanAnomalyAtEpoch (rad)
 
 	@Body,*
