use geeASL instead of mass

--- a/GameData/Sigma/Dimensions/Configs/ReDimension/setDimensions.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/setDimensions.cfg
@@ -28,9 +28,7 @@
 		@Properties
 		{
 			@radius *= #$../PlanetDimensions[0]$
-			@mass *= #$../PlanetDimensions[0]$
-			@mass *= #$../PlanetDimensions[0]$
-			@mass *= #$../PlanetDimensions[4]$
+			@geeASL *= #$../PlanetDimensions[4]$
 			@rotationPeriod *= #$../PlanetDimensions[3]$
 			@sphereOfInfluence *= #$../PlanetDimensions[8]$
 			@ScienceValues
