--- a/GameData/Sigma/Dimensions/Configs/ReDimension/advancedSettings.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/advancedSettings.cfg
@@ -57,18 +57,27 @@
 	%scanAltitude = 1
 }
 
-// Create PlanetDimensions parameter
-
-@SigmaDimensions:AFTER[SigDim]
-{
-	%PlanetDimensions = #$Resize$,$Rescale$,$Atmosphere$,$dayLengthMultiplier$,$geeASLmultiplier$,$landscape$,$atmoVisualEffect$,$resizeScatter$,$CustomSoISize$,$CustomRingSize$,$atmoASL$,$tempASL$
-}
+// Create SigmaDimensions node in each body
 
 @Kopernicus:AFTER[SigDim]
 {
 	@Body,*
 	{
-		%PlanetDimensions = #$@SigmaDimensions/PlanetDimensions$
-		%PlanetMultiplier = 1,1,1,1,1,1,1,1,1,1,1,1
+		!SigmaDimensions,* {}
+		SigmaDimensions
+		{
+			Resize = #$@SigmaDimensions/Resize$
+			Rescale = #$@SigmaDimensions/Rescale$
+			Atmosphere = #$@SigmaDimensions/Atmosphere$
+			dayLengthMultiplier = #$@SigmaDimensions/dayLengthMultiplier$
+			geeASLmultiplier = #$@SigmaDimensions/geeASLmultiplier$
+			landscape = #$@SigmaDimensions/landscape$
+			atmoVisualEffect = #$@SigmaDimensions/atmoVisualEffect$
+			resizeScatter = #$@SigmaDimensions/resizeScatter$
+			CustomSoISize = #$@SigmaDimensions/CustomSoISize$
+			CustomRingSize = #$@SigmaDimensions/CustomRingSize$
+			atmoASL = #$@SigmaDimensions/atmoASL$
+			tempASL = #$@SigmaDimensions/tempASL$
+		}
 	}
 }
