--- a/GameData/Sigma/Dimensions/Configs/ReDimension/atmoScale.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/atmoScale.cfg
@@ -19,9 +19,9 @@
 		}
 		@Atmosphere
 		{
-			@maxAltitude *= #$../PlanetDimensions[2]$
-			@altitude *= #$../PlanetDimensions[2]$
-			@atmosphereDepth *= #$../PlanetDimensions[2]$
+			@maxAltitude *= #$../SigmaDimensions/Atmosphere$
+			@altitude *= #$../SigmaDimensions/Atmosphere$
+			@atmosphereDepth *= #$../SigmaDimensions/Atmosphere$
 			@AtmosphereFromGround:HAS[~outerRadius[*]]
 			{
 				outerRadius = #$../../Properties/radius$
@@ -45,20 +45,20 @@
 			{
 				// inner radius
 				@innerRadius -= #$../../Properties/radius$
-				@innerRadius *= #$../../PlanetDimensions[2]$
-				@innerRadius *= #$../../PlanetDimensions[6]$
-				@innerRadius /= #$../../PlanetDimensions[0]$
+				@innerRadius *= #$../../SigmaDimensions/Atmosphere$
+				@innerRadius *= #$../../SigmaDimensions/atmoVisualEffect$
+				@innerRadius /= #$../../SigmaDimensions/Resize$
 				@innerRadius += #$../../Properties/radius$
-				@innerRadius *= #$../../PlanetDimensions[0]$
+				@innerRadius *= #$../../SigmaDimensions/Resize$
 				
 				// outer radius
 				@outerRadius -= #$../../Properties/radius$
-				@outerRadius *= #$../../PlanetDimensions[2]$
-				@outerRadius *= #$../../PlanetDimensions[6]$
+				@outerRadius *= #$../../SigmaDimensions/Atmosphere$
+				@outerRadius *= #$../../SigmaDimensions/atmoVisualEffect$
 				%transformScale = #$outerRadius$
-				@outerRadius /= #$../../PlanetDimensions[0]$
+				@outerRadius /= #$../../SigmaDimensions/Resize$
 				@outerRadius += #$../../Properties/radius$
-				@outerRadius *= #$../../PlanetDimensions[0]$
+				@outerRadius *= #$../../SigmaDimensions/Resize$
 				!innerRadiusMult,* = DEL
 				!outerRadiusMult,* = DEL
 			}
@@ -70,7 +70,7 @@
 			{
 				@transformScale *= 2
 				@transformScale /= #$../../Properties/radius$
-				@transformScale /= #$../../PlanetDimensions[0]$
+				@transformScale /= #$../../SigmaDimensions/Resize$
 				@transformScale += 1
 				@transformScale = #$transformScale$,$transformScale$,$transformScale$
 			}
@@ -85,9 +85,9 @@
 			@pressureCurve
 			{
 				@key,* ^= :$: 0 0 0 x:
-				@key,*[1, ] *= #$../../PlanetDimensions[10]$
-				@key,*[2, ] *= #$../../PlanetDimensions[10]$
-				@key,*[3, ] *= #$../../PlanetDimensions[10]$
+				@key,*[1, ] *= #$../../SigmaDimensions/atmoASL$
+				@key,*[2, ] *= #$../../SigmaDimensions/atmoASL$
+				@key,*[3, ] *= #$../../SigmaDimensions/atmoASL$
 				@key,* ^= : 0 0 0 x$: :
 			}
 			
@@ -96,9 +96,9 @@
 			@temperatureCurve
 			{
 				@key,* ^= :$: 0 0 0 x:
-				@key,*[1, ] *= #$../../PlanetDimensions[11]$
-				@key,*[2, ] *= #$../../PlanetDimensions[11]$
-				@key,*[3, ] *= #$../../PlanetDimensions[11]$
+				@key,*[1, ] *= #$../../SigmaDimensions/tempASL$
+				@key,*[2, ] *= #$../../SigmaDimensions/tempASL$
+				@key,*[3, ] *= #$../../SigmaDimensions/tempASL$
 				@key,* ^= : 0 0 0 x$: :
 			}
 		}	
@@ -109,9 +109,9 @@
 			@pressureCurve
 			{
 				@key,* ^= :$: 0 0 0 x:
-				@key,*[0, ] *= #$../../PlanetDimensions[2]$
-				@key,*[2, ] /= #$../../PlanetDimensions[2]$
-				@key,*[3, ] /= #$../../PlanetDimensions[2]$
+				@key,*[0, ] *= #$../../SigmaDimensions/Atmosphere$
+				@key,*[2, ] /= #$../../SigmaDimensions/Atmosphere$
+				@key,*[3, ] /= #$../../SigmaDimensions/Atmosphere$
 				@key,* ^= : 0 0 0 x$: :
 			}
 		}
@@ -122,9 +122,9 @@
 			@temperatureCurve
 			{
 				@key,* ^= :$: 0 0 0 x:
-				@key,*[0, ] *= #$../../PlanetDimensions[2]$
-				@key,*[2, ] /= #$../../PlanetDimensions[2]$
-				@key,*[3, ] /= #$../../PlanetDimensions[2]$
+				@key,*[0, ] *= #$../../SigmaDimensions/Atmosphere$
+				@key,*[2, ] /= #$../../SigmaDimensions/Atmosphere$
+				@key,*[3, ] /= #$../../SigmaDimensions/Atmosphere$
 				@key,* ^= : 0 0 0 x$: :
 			}
 		}
@@ -135,9 +135,9 @@
 			@temperatureSunMultCurve
 			{
 				@key,* ^= :$: 0 0 0 x:
-				@key,*[0, ] *= #$../../PlanetDimensions[2]$
-				@key,*[2, ] /= #$../../PlanetDimensions[2]$
-				@key,*[3, ] /= #$../../PlanetDimensions[2]$
+				@key,*[0, ] *= #$../../SigmaDimensions/Atmosphere$
+				@key,*[2, ] /= #$../../SigmaDimensions/Atmosphere$
+				@key,*[3, ] /= #$../../SigmaDimensions/Atmosphere$
 				@key,* ^= : 0 0 0 x$: :
 			}
 		}
