--- a/GameData/Sigma/Dimensions/Configs/ReDimension/newCacheFiles.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/newCacheFiles.cfg
@@ -1,12 +1,20 @@
 @Kopernicus:FOR[SigDim2]
 {
-	@Body:HAS[#PlanetDimensions2[*,True],~cacheFile[*]]
+	@Body:HAS[@SigmaDimensions:HAS[#Resize[1],#landscape[1]]]
+	{
+		%editCache = False
+	}
+	@Body:HAS[~cacheFile[*],~editCache[False]]
 	{
 		cacheFile = #Kopernicus/Cache/$name$.bin
 	}
-	@Body:HAS[#PlanetDimensions2[*,True]]
+	@Body:HAS[~editCache[False]]
 	{
 		@cacheFile = #Sigma/Dimensions/Cache/§$PlanetDimensions[0]$x]Resize/§$PlanetDimensions[5]$x]landscape/$cacheFile$
 		@cacheFile ^= :§:[:
+	}
+	@Body,*
+	{
+		!editCache = DEL
 	}
 }
